// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/kubernetes/extract extractPackageFile() extracts image line in a YAML array 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v2.1.0",
    "datasource": "docker",
    "depName": "quay.io/external_storage/local-volume-provisioner",
    "replaceString": "quay.io/external_storage/local-volume-provisioner:v2.1.0",
  },
  Object {
    "currentValue": "apps/v1",
    "depName": "DaemonSet",
  },
]
`;

exports[`modules/manager/kubernetes/extract extractPackageFile() extracts multiple Kubernetes configurations 1`] = `
Array [
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "1.7.9",
    "datasource": "docker",
    "depName": "nginx",
    "replaceString": "nginx:1.7.9",
  },
  Object {
    "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
    "currentDigest": undefined,
    "currentValue": "v1.11.1",
    "datasource": "docker",
    "depName": "k8s.gcr.io/kube-proxy-amd64",
    "replaceString": "k8s.gcr.io/kube-proxy-amd64:v1.11.1",
  },
  Object {
    "currentValue": "apps/v1",
    "depName": "Deployment",
  },
  Object {
    "currentValue": "extensions/v1beta1",
    "depName": "DaemonSet",
  },
]
`;

exports[`modules/manager/kubernetes/extract extractPackageFile() returns only API version 1`] = `
Array [
  Object {
    "currentValue": "v1",
    "depName": "ConfigMap",
  },
]
`;
